--- a/index.html
+++ b/index.html
@@ -3,9 +3,31 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>rewrite</title>
+  <title>rewrite-vue</title>
 </head>
 <body>
-  
+  <div id="app">
+    <h1>{{name}}</h1>
+  </div>
+  <script src="./dist/vue.js"></script>
+  <script>
+    let vm = new Vue({
+      el:'#app',
+      data:{
+        name:'xzp',
+        age:24,
+        foo:{
+          bar:'bar',
+          baz:'baz',
+          number:88
+        },
+        arr:[
+          0,1,{
+            age:18
+          }
+        ]
+      }
+    })
+  </script>
 </body>
 </html>
