feat(生成code): 根据ast抽象语法树生成对应的code字符串

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 </head>
 <body>
   <div id="app" name="abc" style="background-color: red; color:black">
-    <h6 title="name">{{name}}</h6>
+    <h6 title="name">hello,{{name}}world</h6>
     <ul>
       <li foo="baz">
         {{foo.bar}}
